# stac-api-validator

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE_REPORT.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  noxfile.py  package-lock.json  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: constraints.in  constraints.txt  pr.yml  release-please.yml  release.yml  tests.yml  validate.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/stac_api_validator/: __init__.py  __main__.py  filters.py  geometries.py  validations.py
stac_api_validator/: geometries.py  validate.py  validate_all.py  validations.py
tests/: __init__.py  conftest.py  test_landing_page.py  test_main.py  test_validations.py
tests/resources/: landing_page.json  sample-item.json  stac-check-config.yaml
