[tool.poetry]
name = "stac-api-validator"
version = "0.6.0"
description = "STAC API Validator"
authors = ["Phil Varner <phil@philvarner.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/stac-utils/stac-api-validator"
repository = "https://github.com/stac-utils/stac-api-validator"
documentation = "https://stac-api-validator.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
Changelog = "https://github.com/stac-utils/stac-api-validator/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
certifi = "^2022.12.07"  # CVE-2022-23491: https://github.com/certifi/python-certifi/security/advisories/GHSA-43fp-rhv2-5gv8
pystac-client = "^0.6.1"
requests = "^2.28.1"
pystac = {extras = ["orjson"], version = "^1.7.1"}
jsonschema = "^4.16.0"
PyYAML = "6.0"
Shapely = "1.8.4"
more_itertools = "^8.14.0"
stac-check = "^1.3.1"
stac-validator = "^3.2.0"
deepdiff = "^6.2.3"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=22.8.0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
#flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.981"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
stac-api-validator = "stac_api_validator.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["stac_api_validator", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 10 # todo: get back to 85

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
#ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["shapely.geometry", "stac_check.lint", "stac_validator.stac_validator", "deepdiff"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
