[project]
name = "stac-api-validator"
version = "0.6.8"
description = "STAC API Validator"
authors = [{ name = "Phil Varner", email = "phil@philvarner.com" }]
license = "Apache-2.0"
readme = "README.md"
classifiers = ["Development Status :: 4 - Beta"]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.2",
    "certifi>=2025.7.14",
    "pystac-client>=0.8.6",
    "requests>=2.32.4",
    "pystac[orjson]>=1.13.0",
    "jsonschema>=4.25.0",
    "PyYAML>=6.0.2",
    "Shapely>=2.1.1",
    "more_itertools>=10.7.0",
    "stac-check>=1.11.1",
    "stac-validator>=3.10.1",
    "deepdiff>=8.5.0",
]

[project.urls]
Changelog = "https://github.com/stac-utils/stac-api-validator/releases"
Homepage = "https://github.com/stac-utils/stac-api-validator"
Repository = "https://github.com/stac-utils/stac-api-validator"
Documentation = "https://stac-api-validator.readthedocs.io"

[dependency-groups]
dev = [
    "Pygments>=2.19.2",
    "coverage[toml]>=7.9.2",
    "darglint>=1.8.1",
    "furo>=2025.7.19",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "prek",
    "pytest>=8.4.1",
    "safety>=3.6.0",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-click>=6.0.0",
    "typeguard>=4.4.4",
    "xdoctest[colors]>=1.2.0",
    "myst-parser>=4.0.1",
    "ruff>=0.14.13",
]

[project.scripts]
stac-api-validator = "stac_api_validator.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["stac_api_validator", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 10     # todo: get back to 85

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
#ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "shapely.geometry",
    "stac_check.lint",
    "stac_validator.stac_validator",
    "deepdiff",
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
